--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,7 +6,15 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import '~admin-lte/bower_components/bootstrap/dist/css/bootstrap.min.css';
+
+
+@import '~admin-lte/dist/css/AdminLte.css';
+@import '~admin-lte/dist/css/skins/_all-skins.min.css';
+@import '~admin-lte/dist/css/skins/_all-skins.min.css';
+@import '~admin-lte/bower_components/Ionicons/css/ionicons.min.css';
+@import '~admin-lte/bower_components/font-awesome/css/font-awesome.min.css';
+
 
 .navbar-laravel {
   background-color: #fff;
