--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,9 +11,11 @@
 
 @import '~admin-lte/dist/css/AdminLte.css';
 @import '~admin-lte/dist/css/skins/_all-skins.min.css';
-@import '~admin-lte/dist/css/skins/_all-skins.min.css';
 @import '~admin-lte/bower_components/Ionicons/css/ionicons.min.css';
 @import '~admin-lte/bower_components/font-awesome/css/font-awesome.min.css';
+@import '~admin-lte/plugins/iCheck/square/blue.css';
+@import '~admin-lte/bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css';
+
 
 
 .navbar-laravel {
